--- a/Mindful Moments Web/.vscode/emergency-support-html.html
+++ b/Mindful Moments Web/.vscode/emergency-support-html.html
@@ -200,20 +200,20 @@
                     </h2>
                     <ul class="hotline-list">
                         <li class="hotline-item">
-                            <span class="hotline-name">National Suicide Prevention Lifeline</span>
-                            <a href="tel:988" class="hotline-number">988</a>
+                            <span class="hotline-name">Dubai Police Emergency</span>
+                            <a href="tel:999" class="hotline-number">999</a>
                         </li>
                         <li class="hotline-item">
-                            <span class="hotline-name">Crisis Text Line</span>
-                            <a href="sms:741741" class="hotline-number">Text HOME to 741741</a>
+                            <span class="hotline-name">Dubai Ambulance</span>
+                            <a href="tel:998" class="hotline-number">998</a>
                         </li>
                         <li class="hotline-item">
-                            <span class="hotline-name">SAMHSA's National Helpline</span>
-                            <a href="tel:18006624357" class="hotline-number">1-800-662-4357</a>
+                            <span class="hotline-name">Al Amal Psychiatric Hospital</span>
+                            <a href="tel:97143200000" class="hotline-number">+971 4 320 0000</a>
                         </li>
                         <li class="hotline-item">
-                            <span class="hotline-name">Veterans Crisis Line</span>
-                            <a href="tel:18002738255" class="hotline-number">1-800-273-8255</a>
+                            <span class="hotline-name">Emirates Foundation - Takatof</span>
+                            <a href="tel:9718007243" class="hotline-number">800 7243</a>
                         </li>
                     </ul>
                 </div>
@@ -223,16 +223,20 @@
                         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
                             <path d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 15h-2v-2h2v2zm0-4h-2V7h2v6z"/>
                         </svg>
-                        Emergency Services
+                        Mental Health Support
                     </h2>
                     <ul class="hotline-list">
                         <li class="hotline-item">
-                            <span class="hotline-name">Emergency Services</span>
-                            <a href="tel:911" class="hotline-number">911</a>
+                            <span class="hotline-name">National Program for Happiness & Wellbeing</span>
+                            <a href="tel:971800424" class="hotline-number">800 424</a>
                         </li>
                         <li class="hotline-item">
-                            <span class="hotline-name">Poison Control</span>
-                            <a href="tel:18002221222" class="hotline-number">1-800-222-1222</a>
+                            <span class="hotline-name">Dubai Health Authority - Mental Health</span>
+                            <a href="tel:971800342" class="hotline-number">800 342</a>
+                        </li>
+                        <li class="hotline-item">
+                            <span class="hotline-name">Abu Dhabi Health Services (SEHA)</span>
+                            <a href="tel:97180050" class="hotline-number">800 50</a>
                         </li>
                     </ul>
                 </div>
@@ -245,14 +249,14 @@
                         Additional Resources
                     </h2>
                     <div style="text-align: center;">
-                        <a href="https://www.samhsa.gov/find-help/national-helpline" class="resource-link" target="_blank">SAMHSA Resources</a>
-                        <a href="https://www.nimh.nih.gov/health" class="resource-link" target="_blank">NIMH Information</a>
-                        <a href="https://www.mentalhealth.gov" class="resource-link" target="_blank">Mental Health.gov</a>
+                        <a href="https://www.mohap.gov.ae/en/Pages/default.aspx" class="resource-link" target="_blank">Ministry of Health & Prevention</a>
+                        <a href="https://www.dha.gov.ae/en/Pages/default.aspx" class="resource-link" target="_blank">Dubai Health Authority</a>
+                        <a href="https://www.seha.ae/en/Pages/default.aspx" class="resource-link" target="_blank">SEHA Health Services</a>
                     </div>
                 </div>
 
                 <div class="disclaimer">
-                    <p><strong>Disclaimer:</strong> This page provides emergency contact information and resources. If you're experiencing a life-threatening emergency, please call 911 immediately. These resources are not a substitute for professional medical advice, diagnosis, or treatment.</p>
+                    <p><strong>Disclaimer:</strong> This page provides emergency contact information and resources for UAE residents. If you're experiencing a life-threatening emergency, please call 999 immediately. These resources are not a substitute for professional medical advice, diagnosis, or treatment.</p>
                 </div>
             </div>
         </main>
