--- a/Mindful Moments Web/.vscode/signup-page.html
+++ b/Mindful Moments Web/.vscode/signup-page.html
@@ -51,7 +51,7 @@
                     </div>
                 </div>
 
-                <form id="signupForm" onsubmit="handleSignup(event)">
+                <form id="signupForm" onsubmit="handleFormSubmission(event)">
                     <!-- Step 1: Account Information -->
                     <div class="form-step active" id="step-1">
                         <div id="errorMessage" class="error-message"></div>
